Complete project lifecycle: accept/reject, integration tests stabilized And slight changes in security util needed for frontend.